feat (kendo) grid configs

--- a/html-refs/gmail/open-gmail-login-with-userinfo.html
+++ b/html-refs/gmail/open-gmail-login-with-userinfo.html
@@ -1,2 +1,2 @@
-<a href="https://accounts.google.com/AccountChooser?continue=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F%3Fauthuser%3DUSERNAME%40DOMAIN&amp;service=mail&amp;Email=11800324@students.koi.edu.au"
+<a href="https://accounts.google.com/AccountChooser?continue=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F%3Fauthuser%3DUSERNAME%40DOMAIN&amp;service=mail&amp;Email=11800324@gmail.domain.com"
 	target="_blank">Google Mail Login</a>
