--- a/js-front-core/fetch/static/_13_sending_credentials.html
+++ b/js-front-core/fetch/static/_13_sending_credentials.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <title></title>
+  </head>
 
-<head>
-	<meta charset="UTF-8" />
-	<title></title>
-</head>
-
-<body>
-	<script type="text/javascript">
-		fetch("ex-req", {
-			credentials: 'include'
-		})
-	</script>
-</body>
-
+  <body>
+    <script type="text/javascript">
+      fetch('ex-req', {
+        credentials: 'include'
+      });
+    </script>
+  </body>
 </html>
