--- a/js-front-core/fetch/static/_01_sample_fetch_request.html
+++ b/js-front-core/fetch/static/_01_sample_fetch_request.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <title></title>
+  </head>
 
-<head>
-	<meta charset="UTF-8" />
-	<title></title>
-</head>
+  <body>
+    <img />
+    <script type="text/javascript">
+      var myImage = document.querySelector('img');
 
-<body>
-	<img />
-	<script type="text/javascript">
-		var myImage = document.querySelector('img');
-
-		fetch('https://loggar.github.io/note/sample-res/sample.1.png').then(function (response) {
-			return response.blob();
-		}).then(function (myBlob) {
-			var objectURL = URL.createObjectURL(myBlob);
-			myImage.src = objectURL;
-		});
-	</script>
-</body>
-
+      fetch('https://loggar.github.io/note/sample-res/sample.1.png')
+        .then(function(response) {
+          return response.blob();
+        })
+        .then(function(myBlob) {
+          var objectURL = URL.createObjectURL(myBlob);
+          myImage.src = objectURL;
+        });
+    </script>
+  </body>
 </html>
