--- a/js-front-core/fetch/static/_09_body_data.html
+++ b/js-front-core/fetch/static/_09_body_data.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <title></title>
+  </head>
 
-<head>
-	<meta charset="UTF-8" />
-	<title></title>
-</head>
-
-<body>
-	<script type="text/javascript">
-		/*
+  <body>
+    <script type="text/javascript">
+      /*
 		Both requests and responses may contain body data. A body is an instance of any of the following types:
 
 		ArrayBuffer
@@ -30,17 +29,16 @@
 
 		Request bodies can be set by passing body parameters:
 		*/
-		var form = new FormData(document.getElementById('login-form'));
-		fetch("/login", {
-			method: "POST",
-			body: form
-		});
+      var form = new FormData(document.getElementById('login-form'));
+      fetch('/login', {
+        method: 'POST',
+        body: form
+      });
 
-		/*
+      /*
 		Both request and response (and by extension the fetch() function), will try to intelligently determine the content type.
 		A request will also automatically set a Content-Type header if none is set in the dictionary.
 		*/
-	</script>
-</body>
-
+    </script>
+  </body>
 </html>
