--- a/js-front-core/fetch/static/_11_chaining_promises.html
+++ b/js-front-core/fetch/static/_11_chaining_promises.html
@@ -1,34 +1,33 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <title></title>
+  </head>
 
-<head>
-	<meta charset="UTF-8" />
-	<title></title>
-</head>
+  <body>
+    <script type="text/javascript">
+      function status(response) {
+        if (response.status >= 200 && response.status < 300) {
+          return Promise.resolve(response);
+        } else {
+          return Promise.reject(new Error(response.statusText));
+        }
+      }
 
-<body>
-	<script type="text/javascript">
-		function status(response) {
-			if (response.status >= 200 && response.status < 300) {
-				return Promise.resolve(response)
-			} else {
-				return Promise.reject(new Error(response.statusText))
-			}
-		}
+      function json(response) {
+        return response.json();
+      }
 
-		function json(response) {
-			return response.json()
-		}
-
-		fetch('ex-req')
-			.then(status)
-			.then(json)
-			.then(function (data) {
-				console.log('Request succeeded with JSON response', data);
-			}).catch(function (error) {
-				console.log('Request failed', error);
-			});
-	</script>
-</body>
-
+      fetch('ex-req')
+        .then(status)
+        .then(json)
+        .then(function(data) {
+          console.log('Request succeeded with JSON response', data);
+        })
+        .catch(function(error) {
+          console.log('Request failed', error);
+        });
+    </script>
+  </body>
 </html>
