--- a/js-front-core/fetch/static/_12_post_requests.html
+++ b/js-front-core/fetch/static/_12_post_requests.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <title></title>
+  </head>
 
-<head>
-	<meta charset="UTF-8" />
-	<title></title>
-</head>
-
-<body>
-	<script type="text/javascript">
-		fetch("ex-req", {
-			method: 'post',
-			headers: {
-				"Content-type": "application/x-www-form-urlencoded; charset=UTF-8"
-			},
-			body: 'foo=bar&lorem=ipsum'
-		})
-			.then(json)
-			.then(function (data) {
-				console.log('Request succeeded with JSON response', data);
-			})
-			.catch(function (error) {
-				console.log('Request failed', error);
-			});
-	</script>
-</body>
-
+  <body>
+    <script type="text/javascript">
+      fetch('ex-req', {
+        method: 'post',
+        headers: {
+          'Content-type': 'application/x-www-form-urlencoded; charset=UTF-8'
+        },
+        body: 'foo=bar&lorem=ipsum'
+      })
+        .then(json)
+        .then(function(data) {
+          console.log('Request succeeded with JSON response', data);
+        })
+        .catch(function(error) {
+          console.log('Request failed', error);
+        });
+    </script>
+  </body>
 </html>
