feat (jquery) printthis

--- a/js-jquery/modal/modal_file.html
+++ b/js-jquery/modal/modal_file.html
@@ -10,7 +10,7 @@
 
 <body>
 	<div class="dialogBox" style="border:1px solid gray;">
-		<a href="./modal_file_target.html" class="exampleLink">Test</a>
+		<a href="./modal_file_target.html" class="exampleLink">Modal External File</a>
 	</div>
 	<script type="text/javascript">
 		(function ($) {
