feat (html) details

--- a/html/section-details/section-details.1.html
+++ b/html/section-details/section-details.1.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="./details.css">
+<link rel="stylesheet" type="text/css" href="./section-details.1.css">
 </head>
 <body>
 
