feat (kendo) grid, dropdown

--- a/js-kendo/kendo-dropdown/dropdown.prevent_onchange.2.html
+++ b/js-kendo/kendo-dropdown/dropdown.prevent_onchange.2.html
@@ -1,5 +1,5 @@
 <script>
-  koiDropdown.init($('#' + dropdownId), data, null, {
+  myDropdown.init($('#' + dropdownId), data, null, {
     optionLabel: 'Select Course for the Tuition Fee',
     dataTextField: 'COURSE_NM',
     dataValueField: 'COURSE_IDX',
