feat (background-task) requestIdleCallback

--- a/js-front.core/dialog/dialog.html
+++ b/js-front.core/dialog/dialog.html
@@ -1,11 +1,11 @@
 <html>
-  <header>
+  <head>
     <style>
       dialog::backdrop {
         background-color: lightblue !important;
       }
     </style>
-  </header>
+  </head>
   <body>
     <dialog close>
       <form method="dialog">
