--- a/js-front.dev/script.import.non-esm-lib/import-Non-ESM-lib.4.require.html
+++ b/js-front.dev/script.import.non-esm-lib/import-Non-ESM-lib.4.require.html
@@ -1,5 +1,5 @@
 <html>
-  <header>
+  <head>
     <style>
       /* Edit the CSS here and check out the AST! */
       pre {
@@ -8,7 +8,7 @@
         font: 80%/1.4 Consolas, Monaco, monospace;
       }
     </style>
-  </header>
+  </head>
   <body>
     <pre id="AST"></pre>
     <script>
