--- a/js-front.dom/dom.IntersectionObserver/IntersectionObserver.ex.2.visible-change.html
+++ b/js-front.dom/dom.IntersectionObserver/IntersectionObserver.ex.2.visible-change.html
@@ -1,6 +1,6 @@
 <!-- https://developer.mozilla.org/en-US/docs/Web/API/Intersection_Observer_API-->
 <html>
-  <header>
+  <head>
     <style>
       #box {
         background-color: rgba(40, 40, 190, 255);
@@ -28,7 +28,7 @@
         padding: 20px;
       }
     </style>
-  </header>
+  </head>
   <body>
     <div id="box">
       <div class="vertical">Welcome to <strong>The Box!</strong></div>
