--- a/js-front.practice/scroll/scroll-aware-navigation.html
+++ b/js-front.practice/scroll/scroll-aware-navigation.html
@@ -1,6 +1,6 @@
 <!-- https://developer.mozilla.org/en-US/docs/Web/API/Intersection_Observer_API-->
 <html>
-  <header>
+  <head>
     <style>
       body {
         margin: 0;
@@ -69,7 +69,7 @@
         background-color: #fd0054;
       }
     </style>
-  </header>
+  </head>
   <body>
     <header>
       <nav>
