feat (prefetching) javascript modules

--- a/js.dev/link/head.link-prefetching.html
+++ b/js.dev/link/head.link-prefetching.html
@@ -1,5 +1,16 @@
 <!-- full page -->
-<link rel="prefetch" href="https://loggar.github.io/note/sample-res/sample.1.json" />
+<link
+  rel="prefetch"
+  href="https://loggar.github.io/note/sample-res/sample.1.json"
+/>
 
 <!-- just an image -->
-<link rel="prefetch" href="https://loggar.github.io/note/sample-res/charly-loggar-logo.png" />
+<link
+  rel="prefetch"
+  href="https://loggar.github.io/note/sample-res/charly-loggar-logo.png"
+/>
+
+<link rel="prefetch" href="/articles/" as="document" />
+<!--
+  The as attribute is not mandatory, but it's recommended. It helps the browser set the right headers, and determine whether the resource is already in the cache. Example values for this attribute include: document, script, style, font, image, and others.
+-->
